--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">VerticalTextView</string>
+    <string name="text_zhuge_applause">三国鼎立你建立了盖世功绩，创八阵图你成就了永久声名。江水东流推不转你布阵石头，千古遗恨你灭吴失策功未就。</string>
 </resources>
